--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-Ready/SE3 Server [Beta 1.9]/ServerUniverse/
+Ready/SE3 server [Beta 1.9]/ServerUniverse/
