Optimize SC_Data

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
+*.log
 
 # Visual Studio cache directory
 .vs/
@@ -37,3 +38,11 @@ sysinfo.txt
 *.unitypackage
 Ready/Server_Beta_1_12/ServerUniverse/
 Ready/Settings/
+
+# pliki bartka xD
+.vsconfig
+Assets/Packages/
+Packages/manifest.json
+Packages/packages-lock.json
+ProjectSettings/
+UserSettings/
