--- a/ServerReady/authConfig.json
+++ b/ServerReady/authConfig.json
@@ -1,8 +1,8 @@
 {
-	"is_configured": true,
-	"auth_server_url": "ws://localhost:27684",
-	"host_nickname": "Kamiloso",
-	"host_password": "haslo123",
+	"is_configured": false,
+	"auth_server_url": "wss://comp.se3.page:27684",
+	"host_nickname": "YourUsername",
+	"host_password": "RegisterInSE3",
 	"server_name": "mein.server",
 	"server_redirect_address": "ws://localhost:"
 }
