--- a/ServerReady/config.json
+++ b/ServerReady/config.json
@@ -1,6 +1,7 @@
 {
 	"universe_name": "ServerUniverse",
 	"max_players": 10,
+	"max_connections_per_ip": 10,
 	"port": 27683,
 	"pvp": true,
 	"show_positions": true,
@@ -14,8 +15,13 @@
 		"ExampleNick3",
 		"ExampleNick4"
 	],
+	"banned_ips": [
+		"0.0.0.0",
+		"255.255.255.255"
+	],
 	"anti_cheat": {
-		"max_movement_per_period": 20, "period_in_ticks": 10,
+		"max_movement_per_period": 20,
+		"period_in_ticks": 10,
 		"bullet_spawn_allow_radius": 3
 	}
 }
