Datapack import updated

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ sysinfo.txt
 ServerReady/ServerUniverse/
 ServerReady/config.json
 ServerReady/authConfig.json
+ServerReady/Datapack.jse3
 WindowsBuild/Settings/
 LinuxBuild/Settings/
 Settings/
