--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -8,6 +8,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
+	"last_search.5A656512" = "ref=\"Assets/Game/Materials1/OtherFobs/Bases/MT_cpB1.mat\""
+	"OpenInspectorPreview.5A656512" = "0"
+	"currentGroup.5A656512" = null
 }
 providers = {
 	find = {
